# rhai-doc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cli.yml  example.html  index.html  pages--anything.html  rhai-doc-styles.css
assets/: fn-block.html.hbs  page.html.hbs  rhai.toml  styles.tpl.css
doc/: example.html  index.html  pages--junk.html
examples/: README.md
examples/basic/: example.rhai  rhai.toml
examples/basic/nested/: empty.rhai  example.rhai
examples/basic/pages/: home.md  junk.md
examples/basic/pages/another/deep/folder/chain/: anything.md
nested/: empty.html  example.html
nested/deep/: empty.html  example.html
pages/: anything.html  junk.html
pages/another/deep/folder/chain/: anything.html
src/: cli.rs  cli.yml  config.rs  data.rs  error.rs  main.rs
