[package]
name = "rhai-doc"
version = "0.1.0"
authors = ["Semirix"]
edition = "2018"

[dependencies]
rhai = { git = "https://github.com/rhaiscript/rhai", features = [ "metadata" ] }
handlebars = "3.5"
pulldown-cmark = { version="0.8", features = ["simd"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
clap = { version = "2.33", features = ["yaml"] }
