[package]
name = "rhai-doc"
version = "0.2.0"
authors = ["Semirix"]
edition = "2018"

[dependencies]
rhai = { version = "0.20", features = [ "metadata" ] }
handlebars = "3.5"
pulldown-cmark = { version="0.8", features = ["simd"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
clap = { version = "2.33", features = ["yaml"] }
