[package]
name = "rhai-doc"
description = "Documentation tool for Rhai - an embedded scripting language and engine for Rust"
version = "0.2.1"
authors = ["Semirix"]
edition = "2018"
homepage = "https://github.com/rhaiscript/rhai-doc"
repository = "https://github.com/rhaiscript/rhai-doc"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["Rhai", "scripting", "scripting-language", "documentation", "site-generator"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
exclude = ["/examples"]

[dependencies]
rhai = { version = "0.20", features = [ "metadata" ] }
handlebars = "4.0.0"
pulldown-cmark = { version="0.8", features = ["simd"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = { version = "2.33", features = ["yaml"] }
